--- a/pm.yml
+++ b/pm.yml
@@ -1,3 +1,4 @@
+name: "Vanitas"
 formats: [ 1, 3, 5, 15, 18, 22, 32, 34, 42, 46 ]
 include: [ "LICENSE", "README.md" ]
 extensions: [ ".png", ".mcmeta" ]
